# diagnostic-triage

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  flake.nix  lake-manifest.json  lakefile.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: nix-packages.yml  release.yml
crates/diagnostic-triage/: Cargo.toml
crates/diagnostic-triage-contracts/: Cargo.toml
crates/diagnostic-triage-contracts/src/: error.rs  jsonl.rs  lib.rs  model.rs  protocol.rs  scalar.rs  validate.rs  wire.rs
crates/diagnostic-triage-contracts/tests/: v1_contracts.rs
crates/diagnostic-triage-engine/: Cargo.toml
crates/diagnostic-triage-engine/src/: classification.rs  dedup.rs  error.rs  finding.rs  fingerprint.rs  identity.rs  lib.rs  normalize.rs  policy.rs  report.rs  verification.rs
crates/diagnostic-triage-engine/tests/: classification.rs  determinism.rs  finding.rs  normalization.rs  policy.rs  report.rs  verification.rs
crates/diagnostic-triage-observer-github-actions/: Cargo.toml
crates/diagnostic-triage-observer-github-actions/src/: lib.rs  main.rs
crates/diagnostic-triage-observer-github-actions/tests/: protocol.rs
crates/diagnostic-triage-observer-github-actions/tests/golden/: workflow-cancelled.json  workflow-enriched.json  workflow-failure-over-budget.json  workflow-malformed.json  workflow-missing.json  workflow-success.json
crates/diagnostic-triage-provider-biome/: Cargo.toml
crates/diagnostic-triage-provider-biome/src/: lib.rs  main.rs  process.rs  sarif.rs
crates/diagnostic-triage-provider-biome/tests/: provider.rs
crates/diagnostic-triage-provider-biome/tests/golden/: biome-assist.sarif.json  biome-clean.sarif.json  biome-findings.sarif.json  biome-format.sarif.json  biome-locations.sarif.json  biome-path-escape.sarif.json  biome-utf16-columns.sarif.json  request.jsonl
crates/diagnostic-triage-provider-python/: Cargo.toml
crates/diagnostic-triage-provider-python/src/: lib.rs  main.rs  process.rs
crates/diagnostic-triage-provider-python/tests/: provider.rs
crates/diagnostic-triage-provider-python/tests/golden/: manifest.jsonl  request-capability-mismatch.json  request-path-escape.json  request.json  ruff-findings.expected.jsonl  ruff-findings.json  ruff-malformed.json  ruff-path-escape.json  ruff-unicode.json  ruff-unicode.provenance.json  ruff-unicode.py
crates/diagnostic-triage-provider-rust/: Cargo.toml
crates/diagnostic-triage-provider-rust/src/: cargo_json.rs  lib.rs  main.rs  process.rs
crates/diagnostic-triage-provider-rust/tests/: provider.rs
crates/diagnostic-triage-provider-rust/tests/golden/: cargo-check-clean.jsonl  cargo-check-error.jsonl  cargo-check-warning.jsonl  cargo-invalid-span.jsonl  cargo-malformed.jsonl  cargo-partial.jsonl  cargo-path-escape.jsonl  clippy-findings.jsonl  request.jsonl  rustc-unicode.jsonl  rustc-unicode.provenance.json  rustc-unicode.rs
crates/diagnostic-triage-runtime/: Cargo.toml
crates/diagnostic-triage-runtime/src/: command.rs  config.rs  execution.rs  execution_identity.rs  github_annotations.rs  issue_draft.rs  issue_draft_sanitize.rs  lib.rs  orchestration.rs  process.rs  reporters.rs  ruff_fix.rs  sarif.rs  scratch.rs  session.rs
crates/diagnostic-triage-runtime/tests/: command.rs  reporters.rs  ruff_fix.rs  sarif.rs
crates/diagnostic-triage-runtime/tests/golden/: empty.tsv  escaped.github-annotations.txt  ruff-safe-fix.json  ruff-safe-fix.patch.json  unsupported-report.sarif.json  valid-report.github-annotations.txt  valid-report.issue.json  valid-report.issue.md  valid-report.sarif.json  valid-report.tsv
crates/diagnostic-triage/src/: lib.rs  main.rs
crates/diagnostic-triage/tests/: cli.rs
docs/adr/: 0001-standalone-canonical-engine.md
docs/agents/: issue-tracker.md  triage-labels.md
docs/contracts/: protocol-v1.md  taxonomy-v1.md
proofs/: issue_draft_format_attribution.lean  issue_draft_markdown_budget.lean  issue_draft_projection_budget.lean  issue_draft_windows_root.lean  process_cleanup.lean  provider_identity_migration.lean  provider_terminal_retention.lean  runtime_apply_safe_publication.lean  runtime_execution_projection.lean  runtime_plan_identity.lean  runtime_target_preflight.lean  runtime_verification_lineage.lean
provenance/imports/: data-format-lab-diagnostic-triage-v0.json
release/: RELEASE_NOTES.md  artifact-matrix.json
schemas/diagnostic-triage/v1/: common.schema.json  model.schema.json  protocol.schema.json  taxonomy.schema.json
tests/: test_contracts.py  test_nix_package_contract.py  test_release_contract.py
tests/fixtures/v1/: handshake-unsupported.json  invalid-completion-count.jsonl  invalid-completion-nonfinal.jsonl  invalid-duplicate-completion.jsonl  invalid-duplicate-object-id.jsonl  invalid-evidence-metadata.jsonl  invalid-execution-attribution.jsonl  invalid-fix-nonpatch-evidence.jsonl  invalid-malformed-line.jsonl  invalid-output-overflow.jsonl  invalid-path-escape.jsonl  invalid-protocol-version.jsonl  invalid-provider-policy-event.jsonl  invalid-request-id.jsonl  invalid-required-capability.jsonl  invalid-role-operation.jsonl  invalid-sequence-gap.jsonl  invalid-timeout-overrun.jsonl  invalid-truncated-session.jsonl  invalid-unnegotiated-event.jsonl  taxonomy-invalid-syntax-wrong-result.json  taxonomy-invalid-unknown-lint.json  taxonomy-syntax-unknown.json  taxonomy-unknown.json  valid-empty-session.jsonl  valid-observer-session.jsonl  valid-report.json  valid-session.jsonl  valid-unknown-optional-capability.jsonl  valid-unsupported-report.json  valid-verified-report.json
tools/: __init__.py  release_manifest.py
