[package]
name = "diagnostic-triage-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
diagnostic-triage-contracts.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
thiserror.workspace = true
tracing.workspace = true
