[package]
name = "diagnostic-triage-observer-github-actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
camino.workspace = true
diagnostic-triage-contracts.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true

[[bin]]
name = "diagnostic-triage-observer-github-actions"
path = "src/main.rs"
