[package]
name = "diagnostic-triage-provider-biome"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
camino.workspace = true
diagnostic-triage-contracts.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
wait-timeout.workspace = true

[lints]
workspace = true

[[bin]]
name = "diagnostic-triage-provider-biome"
path = "src/main.rs"
