[package]
name = "diagnostic-triage-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
camino.workspace = true
csv.workspace = true
diagnostic-triage-contracts.workspace = true
diagnostic-triage-engine.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
wait-timeout.workspace = true
